fixing whitespace mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@ body {
 .products {
   .row {
     padding: 0 15px;
+    margin: 0;
   }
 }
 
